fixing some spacing styling on the search bar and top bar

--- a/client/src/styles/spells.css
+++ b/client/src/styles/spells.css
@@ -102,7 +102,7 @@
   }
 
   .spells-header .search {
-    top: 8.5rem;
+    top: 2rem;
     width: 60%;
   }
 }
